--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,20 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+= form_tag movies_path, :id => "ratings_form", :method => :get do
+  Include:
+  - @ratings_filter = session[:current_ratings]? session[:current_ratings]:@all_ratings
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", '1', @ratings_filter.include?(rating)
+  = submit_tag 'Refresh', :id => "ratings_submit"
+  
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:class => ("hilite" if params[:sort_by] == "title")}= link_to 'Movie Title', movies_path(:sort_by => 'title', :ratings =>@ratings_filter), :id => 'title_header'
       %th Rating
-      %th Release Date
+      %th{:class => ("hilite" if params[:sort_by] == "release_date")}= link_to 'Release Date', movies_path(:sort_by => 'release_date', :ratings => @ratings_filter), :id => 'release_date_header'
       %th More Info
   %tbody
     - @movies.each do |movie|
